general: Add overall style that fixes dropdown menu scrollbar jumps

--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+html body[data-scroll-locked] {
+  overflow: unset !important;
+  margin-right: unset !important;
+  --removed-body-scroll-bar-size: 0 !important;
+  /* is this needed? */
+}
+
+html {
+  scrollbar-gutter: stable;
+}
